# Contraining-LLMs-With-FSMs

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  LLM_CORRECTION_DEMO.md  PROJECT_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  demo.py  demo_latex_integration.py  demo_simple.py  launch_app.py  main.py  pyproject.toml  requirements.txt  run_app.sh  streamlit_app.py
.github/instructions/: copilot-instructions.md.instructions.md
docs/: FSM_DOCUMENTATION.md  MERMAID_DIAGRAMS.md  README_DIAGRAMS.md
examples/: README.md  code_generation.py  conversation_flow.py  demo_latex.py  email_constraint.py  json_constraint.py  main.py
scripts/: README.md
src/: __init__.py
src/fsm/: __init__.py  constraints.py  http_fsm.py  latex_math_fsm.py  state_machine.py
src/llm/: __init__.py  groq_client.py  local_client.py  simple_client.py  unified_client.py
tests/: README.md  test_fsm.py  test_llm.py
tools/: README.md  fsm_diagram.py  fsm_visualizer.py
